--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -10,8 +11,22 @@
     <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
-    <h1>WELCOME TO</h1>
-    <h1>RAKIBUL HASAN WORLD!</h1>
+    <section class="upper-part">
+        <div class="half-width">
+            <h1>WELCOME TO</h1>
+            <h1><span class="orange-color">JHANKAR MAHBUB</span> WORLD!</h1>
+            <h3>Web Designer & Web Developer</h3>
+            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Sit aliquid repudiandae nesciunt mollitia
+                soluta,nobis quod minima ipsum quidem ipsa hic labore? Itaque at dignissimos provident fugit id officia
+                velit!</p>
+            <a class="link-button" target="_blank" href="https://github.com/RAKIB-HASAN-RAFAT">HIRE ME</a>
+        </div>
+        <div class="half-width">
+            <img src="images/jhankar.png" alt="">
+        </div>
+    </section>
 </body>
+
 </html>
