drem area commit

--- a/index.html
+++ b/index.html
@@ -27,6 +27,21 @@
             <img src="images/jhankar.png" alt="">
         </div>
     </section>
+    <section class="dream-big">
+        <div class="half-width">
+            <img src="images/jhankar2.png" alt="">
+        </div>
+        <div class="half-width">
+            <h1>DREAM BIG</h1>
+            <h2>BECOME A WEB DEVELOPER</h2>
+            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Optio quo repellat molestiae perferendis
+                quibusdam sapiente delectus esse nam illum! Dolore nobis pariatur voluptatum est fuga ipsam accusamus
+                non nulla asperiores!</p>
+            <a class="link-button" target="_blank"
+                href="https://docs.google.com/document/d/1eAel2OK6dQVegAoSsiN9fQvGQB4GyERSWE1xpwWQfFM/edit">DOWNLOAD
+                RESUME</a>
+        </div>
+    </section>
 </body>
 
 </html>
