--- a/index.html
+++ b/index.html
@@ -42,6 +42,28 @@
                 RESUME</a>
         </div>
     </section>
+    <section class="experience">
+        <h1>EXPERIENCES</h1>
+        <div class="box">
+            <div id="full-stack" class="experience-item">
+                <h1>FULL STACK DEVELOPER</h1>
+                <h3 class="orange-color">2022-PRESENT| PRO WEB DEVELOPER</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iure hic ad cupiditate. Quis, quos! Vitae
+                    cumque nisi tempora nihil et voluptate officiis, cum molestias! Recusandae illo natus quisquam
+                    praesentium eaque!</p>
+            </div>
+            <div id="junior" class="experience-item">
+                <h1>JUNIOR WEB DEVELOPER</h1>
+                <h3 class="orange-color">2021-2022| HERO LEARNER</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iure hic ad cupiditate. Quis, quos! Vitae
+                    cumque nisi tempora nihil et voluptate officiis, cum molestias! Recusandae illo natus quisquam
+                    praesentium eaque!</p>
+            </div>
+        </div>
+    </section>
+    <footer>
+        <p>© JHANKAR MAHBUB,2021, A PROGRAMMING HERO INITITATIVE</p>
+    </footer>
 </body>
 
 </html>
